Adding the Type1 fonts.  Adding title bar basics.

--- a/src/fonts/gooe_example/example.tex
+++ b/src/fonts/gooe_example/example.tex
@@ -3,7 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{CJKutf8}
 % \usepackage{goonew}
-\usepackage{goosimple}
+\usepackage{gooemacs}
 % \usepackage{gotcmacs}
 \usepackage{xcolor}
 \usepackage{wrapfig}
